# sphexa

./: CMakeLists.txt  README.md  README_insitu.md
.github/workflows/: clang-format.yml
.gitlab/: Dockerfile_2  Dockerfile_hip_2  gitlab-ci.yml
ci/: .common.yml.swp  .cscs.yml.swp  common.yml  cscs.yml
ci/cuda12/: .build_debug_sm90.yml.swp  build_debug_sm90.yml  build_release_sm90.yml  run_debug_sm90.yml  run_release_sm90.yml
cmake/: FindH5Hut.cmake  FindH5hut.cmake
domain/: CMakeLists.txt
domain/include/cstone/: CMakeLists.txt
domain/include/cstone/cuda/: device_vector.cu
domain/include/cstone/domain/: domain.hpp
domain/include/cstone/fields/: data_util.hpp  field_states.hpp
domain/include/cstone/focus/: exchange_focus.hpp  octree_focus_mpi.hpp  rebalance_gpu.cu
domain/include/cstone/halos/: CMakeLists.txt  halos.hpp  halos_utility.cpp  halos_utility.hpp
domain/include/cstone/primitives/: mpi_cuda.cuh  primitives_gpu.cu  warpscan.cuh
domain/include/cstone/sfc/: box.hpp  box_mpi.hpp
domain/include/cstone/traversal/: boxoverlap.hpp  groups_gpu.cuh  macs.hpp  peers.hpp
domain/include/cstone/tree/: definitions.h
domain/test/coord_samples/: random.hpp
domain/test/integration_mpi/: CMakeLists.txt  box_mpi.cpp  domain_nranks.cpp
domain/test/unit/sfc/: box.cpp
domain/test/unit/traversal/: boxoverlap.cpp  macs.cpp  peers.cpp
main/: CMakeLists.txt
main/src/: CMakeLists.txt  ascent_adaptor.h  catalyst_adaptor.h
main/src/analytical_solutions/: CMakeLists.txt
main/src/init/: early_sync.hpp  evrard_init.hpp  factory.hpp  gresho_chan.hpp  grid.hpp  isobaric_cube_init.hpp  kelvin_helmholtz_init.hpp  noh_init.hpp  sedov_init.hpp  settings.hpp  sim_init.cpp  turbulence_init.hpp  utils.hpp  wind_shock_init.hpp
main/src/io/: CMakeLists.txt  arg_parser.cpp  arg_parser.hpp  h5part_wrapper.hpp  id_tag_utils.cpp  id_tag_utils.cu  id_tag_utils.hpp  ifile_io.hpp  ifile_io_ascii.cpp  ifile_io_hdf5.cpp
main/src/observables/: factory.hpp  gpu_reductions.cu  gpu_reductions.h  iobservables.hpp  observables.cpp  time_energies.hpp  wind_bubble_fraction.hpp
main/src/propagator/: CMakeLists.txt  factory.hpp  gravity_wrapper.hpp  ipropagator.cu  ipropagator.hpp  ipropagator_init.hpp  nbody.cpp  nbody.hpp  nbody_init.cpp  propagator.h  propagator_init.cpp  std_disk.cpp  std_disk.hpp  std_hydro.cpp  std_hydro.hpp  std_hydro_grackle.cpp  std_hydro_grackle.hpp  std_hydro_grackle_init.cpp  std_planet.hpp  turb_std_bdt.hpp  turb_ve.hpp  turb_ve_bdt.hpp  turb_ve_bdt_init.cpp  turb_ve_init.cpp  ve_hydro.cpp  ve_hydro.hpp  ve_hydro_bdt.cpp  ve_hydro_bdt.hpp  ve_hydro_bdt_init.cpp  ve_hydro_init.cpp
main/src/sphexa/: CMakeLists.txt  particle_selection.cu  particle_selection.hpp  sphexa.cpp
main/src/util/: CMakeLists.txt  pm_reader.cpp  pm_reader.hpp
main/test/: CMakeLists.txt
main/test/io/: h5part_wrapper.cpp  id_tag_utils.cpp  id_tag_utils_gpu.cpp
main/test/mpi/: CMakeLists.txt
physics/: CMakeLists.txt
physics/Disk/: CMakeLists.txt
physics/Disk/include/: CMakeLists.txt  accretion.hpp  accretion_gpu.cu  accretion_gpu.hpp  accretion_impl.hpp  betaCooling.hpp  betaCooling_gpu.cu  betaCooling_gpu.hpp  beta_cooling.hpp  beta_cooling_gpu.cu  buffer_reduce.hpp  buffer_reduce_concepts.hpp  buffer_reduce_helper.hpp  central_force.hpp  central_force_gpu.cu  central_force_gpu.hpp  computeCentralForce.hpp  computeCentralForce_gpu.cu  computeCentralForce_gpu.hpp  eos_polytropic_loop.hpp  exchangeStarPosition.hpp  exchange_star_position.hpp  get_ptr.hpp  removal_statistics.hpp  star_data.hpp
physics/Disk/test/: CMakeLists.txt  accretion.cpp  disk_test.cpp
physics/Planet/: CMakeLists.txt
physics/Planet/include/: CMakeLists.txt  accretion.hpp  accretion_gpu.cu  accretion_gpu.hpp  accretion_impl.hpp  betaCooling.hpp  betaCooling_gpu.cu  betaCooling_gpu.hpp  computeCentralForce.hpp  computeCentralForce_gpu.cu  computeCentralForce_gpu.hpp  eos_polytropic.hpp  eos_polytropic_gpu.cu  eos_polytropic_gpu.hpp  eos_polytropic_loop.hpp  exchangeStarPosition.hpp  removalStatistics.hpp  star_data.hpp
physics/Planet/test/: CMakeLists.txt  accretion.cpp  planet_test.cpp
physics/cooling/include/cooling/: cooler.cpp
physics/cooling/test/: CMakeLists.txt
ryoanji/src/ryoanji/interface/: multipole_holder.cu  multipole_holder.cuh
ryoanji/src/ryoanji/nbody/: ewald.hpp  traversal.cuh  traversal_cpu.hpp  traversal_gpu.cu  upsweep_cpu.hpp
ryoanji/test/: demo_mpi.cpp
ryoanji/test/interface/: CMakeLists.txt  global_forces_gpu.cpp  global_upsweep_cpu.cpp
ryoanji/test/nbody/: ewald_cpu.cpp  traversal_cpu.cpp
sph/include/sph/: eos.hpp  helmholtz_eos.hpp  particles_data.hpp  particles_data_gpu.cuh  particles_data_stubs.hpp  positions.hpp  sph_gpu.hpp
sph/include/sph/hydro_std/: eos.hpp  eos_gpu.cu  momentum_energy.hpp  momentum_energy_gpu.cu
sph/include/sph/hydro_turb/: turbulence_data.hpp
sph/include/sph/hydro_ve/: eos.hpp  eos_gpu.cu  momentum_energy_kern.hpp  xmass_gpu.cu
sph/test/: CMakeLists.txt  test_eos.cpp
sphexa-org/sphexa/: README.md
sphexa-org/sphexa/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
sphexa-org/sphexa/ghrs-data/snapshots/: 2025-02-25_090927_top_referrers_snapshot.csv  2025-02-25_231953_top_paths_snapshot.csv  2025-02-25_231953_views_clones_series_fragment.csv  2025-02-26_232157_top_paths_snapshot.csv  2025-02-26_232157_top_referrers_snapshot.csv  2025-02-26_232157_views_clones_series_fragment.csv  2025-02-27_232053_top_paths_snapshot.csv  2025-02-27_232053_top_referrers_snapshot.csv  2025-02-27_232053_views_clones_series_fragment.csv  2025-02-28_231952_top_paths_snapshot.csv  2025-02-28_231952_top_referrers_snapshot.csv  2025-02-28_231952_views_clones_series_fragment.csv  2025-03-01_232053_top_paths_snapshot.csv  2025-03-01_232053_top_referrers_snapshot.csv  2025-03-01_232053_views_clones_series_fragment.csv  2025-03-02_231928_top_paths_snapshot.csv  2025-03-02_231928_top_referrers_snapshot.csv  2025-03-02_231928_views_clones_series_fragment.csv
sphexa-org/sphexa/latest-report/: report.html  report.md  report_for_pdf.html
